<resources>
    <string name="app_name">Coursify</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="subheader">Subheader</string>

    <string name="leaderboard_string">Leaderboard</string>
    <string name="review_string">Review Courses</string>
    <string name="course_plan_string">Share Course Plan</string>
    <string name="friend_reviews_string">Friend\'s Reviews</string>
    <string name="friend_course_plan_string">Friend\'s Course Plan</string>
    <string name="all_reviews_string">All Reviews</string>
    <string name="course_recommendations_string">Course Recommendations</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="facebook_app_id">1084294654966719</string>
    <string name="title_activity_fblogin">FBLogin</string>
    <string name="title_activity_fblogin2">FBLogin2</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
