<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:icon="@drawable/a1"
            android:title="@string/leaderboard_string" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/a2"
            android:title="@string/review_string" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:icon="@drawable/a3"
            android:title="@string/course_plan_string" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/a4"
            android:title="@string/friend_reviews_string" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/a5"
            android:title="@string/friend_course_plan_string" />
        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/a6"
            android:title="@string/all_reviews_string" />
        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/a7"
            android:title="@string/course_recommendations_string" />
        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/a8"
            android:title="Guidelines" />

    </group>
</menu>